GBE: fix an ACC register related instruction scheduling bug

Some instructions modify the ACC register in the gen_context
stage which's not regonized by current instruction scheduling
algorithm. This patch fix this bug by checking all the possible
SEL_OPs which may change the ACC implicitly.

The corresponding bugzilla link is as below:
https://bugs.freedesktop.org/show_bug.cgi?id=88587

Signed-off-by: Zhigang Gong <zhigang.gong@intel.com>
Reviewed-by: "Yang, Rong R" <rong.r.yang@intel.com>